k8s/apps/fediverse/elk/elk.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elk
  namespace: elk-app
  labels:
    app: elk
  # annotations:
  #   tailscale.com/expose: "true"
  #   tailscale.com/hostname: "elk"

spec:
  ports:
    - port: 80
      targetPort: 5314
  selector:
    app: elk

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk
  namespace: elk-app
  labels:
    app: elk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: elk
  template:
    metadata:
      labels:
        app: elk
    spec:
      containers:
        - name: elk
          image: ghcr.io/elk-zone/elk:v0.15.1
          ports:
            - containerPort: 5314
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 256Mi
              cpu: 250m
