k8s/apps/fediverse/elk/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk
  namespace: elk-app
spec:
  defaultBackend:
    service:
      name: elk
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - elk
